Fix for [#24654] Sound Actuator doesn't find the file when Blender is reopened.