source/blender/editors/sound/sound_ops.c
@@ -275,7 +275,7 @@ static int unpack_exec(bContext *C, wmOperator *op)
 	if(G.fileflags & G_AUTOPACK)
 		BKE_report(op->reports, RPT_WARNING, "AutoPack is enabled, so image will be packed again on file save.");
 
-	unpackSound(op->reports, sound, method);
+	unpackSound(CTX_data_main(C), op->reports, sound, method);
 
 	return OPERATOR_FINISHED;
 }
